--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django==1.11.5
 django-rest-swagger==2.1.2
 djangorestframework==3.6.2
 djangorestframework-jwt==1.10.0
-BeautifulSoup==3.2.1
 suds==0.4
 xmltodict==0.10.2
 django-oauth-toolkit
+lxml==3.7.3
