--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Django==1.11.5
+#Django==1.11.5
+Django
 django-rest-swagger==2.1.2
-djangorestframework==3.6.2
+djangorestframework
 djangorestframework-jwt==1.10.0
 suds==0.4
 xmltodict==0.10.2
