--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
 #Django==1.11.5
+#django-rest-swagger==2.1.2
+#djangorestframework
+#djangorestframework-jwt==1.10.0
+#suds==0.4
+#xmltodict==0.10.2
+#django-oauth-toolkit
+#lxml==3.7.3
 Django
-django-rest-swagger==2.1.2
+django-rest-swagger
 djangorestframework
-djangorestframework-jwt==1.10.0
-suds==0.4
-xmltodict==0.10.2
+djangorestframework-jwt
+suds
+xmltodict
 django-oauth-toolkit
-lxml==3.7.3
+lxml
